--- a/SpiceItUp/wwwroot/index.html
+++ b/SpiceItUp/wwwroot/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpiceItUp</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="icon" href="/assets/chili-removebg-preview.a382f87c.png" />
+  <title>
+    Spice it up!
+  </title>
+  <script type="module" crossorigin src="/assets/index.9fb42cb7.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.e4c34f59.js">
+  <link rel="stylesheet" href="/assets/index.7d75a827.css">
 </head>
+
 <body>
-    <h1>SpiceItUp Initialized</h1>
-    <p>Check out the api swagger docs <a href="/swagger">here</a> </p>
+  <noscript>
+    <strong>We're sorry but SpiceItUp.client doesn't work properly without JavaScript
+      enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  
 </body>
+
 </html>
